docs update for minio
Use verify configuration option to skip verify or set ca bundle path

--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -285,6 +285,7 @@ sdk {
                 #     secret: "12345678"
                 #     multipart: false
                 #     secure: false
+                #     verify: /path/to/ca/bundle.crt OR false to not verify
                 # }
             ]
         }
