Add agent.poetry_version to specify poetry version (and force installation of poetry if missing)

--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -11,6 +11,7 @@
 
     # Set GIT user/pass credentials (if user/pass are set, GIT protocol will be set to https)
     # leave blank for GIT SSH credentials (set force_git_ssh_protocol=true to force SSH protocol)
+    # Notice: GitHub personal token is equivalent to password, you can put it directly into `git_pass`
     # git_user: ""
     # git_pass: ""
     # git_host: ""
@@ -48,6 +49,8 @@
 
         # specify pip version to use (examples "<20", "==19.3.1", "", empty string will install the latest version)
         pip_version: "<20.2",
+        # specify poetry version to use (examples "<2", "==1.1.1", "", empty string will install the latest version)
+        # poetry_version: "<2",
 
         # virtual environment inheres packages from system
         system_site_packages: false,
