--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -15,6 +15,7 @@ api {
 agent {
     # Set GIT user/pass credentials (if user/pass are set, GIT protocol will be set to https)
     # leave blank for GIT SSH credentials (set force_git_ssh_protocol=true to force SSH protocol)
+    # Notice: GitHub personal token is equivalent to password, you can put it directly into `git_pass`
     git_user=""
     git_pass=""
     # Limit credentials to a single domain, for example: github.com,
@@ -60,6 +61,8 @@ agent {
 
         # specify pip version to use (examples "<20", "==19.3.1", "", empty string will install the latest version)
         # pip_version: "<20"
+        # specify poetry version to use (examples "<2", "==1.1.1", "", empty string will install the latest version)
+        # poetry_version: "<2",
 
         # virtual environment inheres packages from system
         system_site_packages: false,
