Fix hide_docker_command_env_vars mode to include URL passwords and handle env vars containing docker commands

--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -229,6 +229,7 @@ agent {
     hide_docker_command_env_vars {
         enabled: true
         extra_keys: []
+        parse_embedded_urls: true
     }
 
     # allow to set internal mount points inside the docker,
