Add git personal token docs

--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -15,7 +15,11 @@ api {
 agent {
     # Set GIT user/pass credentials (if user/pass are set, GIT protocol will be set to https)
     # leave blank for GIT SSH credentials (set force_git_ssh_protocol=true to force SSH protocol)
-    # Notice: GitHub personal token is equivalent to password, you can put it directly into `git_pass`
+    # **Notice**: GitHub personal token is equivalent to password, you can put it directly into `git_pass`
+    # To learn how to generate git token GitHub/Bitbucket/GitLab:
+    # https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
+    # https://support.atlassian.com/bitbucket-cloud/docs/app-passwords/
+    # https://docs.gitlab.com/ee/user/profile/personal_access_tokens.html
     git_user=""
     git_pass=""
     # Limit credentials to a single domain, for example: github.com,
