--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -325,6 +325,11 @@ sdk {
             key: ""
             secret: ""
             region: ""
+            # Or enable credentials chain to let Boto3 pick the right credentials.
+            # This includes picking credentials from environment variables,
+            # credential file and IAM role using metadata service.
+            # Refer to the latest Boto3 docs
+            use_credentials_chain: false
 
             credentials: [
                 # specifies key/secret credentials to use when handling s3 urls (read or write)
