Add agent.enable_git_ask_pass to improve passing user/pass to git commands

--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -39,6 +39,13 @@
     # default false, only the working directory will be added to the PYHTONPATH
     # force_git_root_python_path: false
 
+    # if set, use GIT_ASKPASS to pass user/pass when cloning / fetch repositories
+    # it solves passing user/token to git submodules.
+    # this is a safer way to ensure multiple users using the same repository will
+    # not accidentally leak credentials
+    # Only supported on Linux systems, it will be the default in future releases
+    # enable_git_ask_pass: false
+
     # in docker mode, if container's entrypoint automatically activated a virtual environment
     # use the activated virtual environment and install everything there
     # set to False to disable, and always create a new venv inheriting from the system_site_packages
@@ -219,6 +226,9 @@
         extra_keys: []
         parse_embedded_urls: true
     }
+
+    # Maximum execution time (in seconds) for Task's abort function call
+    abort_callback_max_timeout: 1800
 
     # allow to set internal mount points inside the docker,
     # especially useful for non-root docker container images.
