Make venv caching the default behavior

--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -113,7 +113,7 @@ agent {
         # minimum required free space to allow for cache entry, disable by passing 0 or negative value
         free_space_threshold_gb: 2.0
         # unmark to enable virtual environment caching
-        # path: ~/.clearml/venvs-cache
+        path: ~/.clearml/venvs-cache
     },
 
     # cached git clone folder
