sth like this should work

--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -325,4 +325,9 @@
     # into the file specified in CLEARML_CUSTOM_BUILD_OUTPUT, the agent will emit a warning and continue with the
     # standard flow.
     custom_build_script: ""
+
+    # when set to false if the agent encounters an exception, 
+    # it will catch and log the exception and continue running.
+    # When set to true the exception will be propogated.
+    crash_on_exception: false
 }
