--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -326,8 +326,8 @@
     # standard flow.
     custom_build_script: ""
 
-    # when set to false if the agent encounters an exception, 
-    # it will catch and log the exception and continue running.
-    # When set to true the exception will be propogated.
-    crash_on_exception: false
+    # Crash on exception: by default when encountering an exception while running a task,
+    # the agent will catch the exception, log it and continue running.
+    # Set this to `true` to propagate exceptions and crash the agent.
+    # crash_on_exception: true
 }
