Add `agent.disable_task_docker_override` configuration option to disable docker override specified in executing tasks

--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -332,4 +332,9 @@
     # the agent will catch the exception, log it and continue running.
     # Set this to `true` to propagate exceptions and crash the agent.
     # crash_on_exception: true
+
+    # Disable task docker override. If true, the agent will use the default docker image and ignore any docker image
+    # and arguments specified in the task's container section (setup shell script from the task container section will
+    # be used in any case, of specified).
+    disable_task_docker_override: false
 }
