--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -70,7 +70,7 @@
         # specify poetry version to use (examples "<2", "==1.1.1", "", empty string will install the latest version)
         # poetry_version: "<2",
 
-        # virtual environment inheres packages from system
+        # virtual environment inherits packages from system
         system_site_packages: false,
 
         # install with --upgrade
@@ -335,6 +335,6 @@
 
     # Disable task docker override. If true, the agent will use the default docker image and ignore any docker image
     # and arguments specified in the task's container section (setup shell script from the task container section will
-    # be used in any case, of specified).
+    # be used in any case, if specified).
     disable_task_docker_override: false
 }
