--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -103,6 +103,10 @@
         # set to True to support torch nightly build installation,
         # notice: torch nightly builds are ephemeral and are deleted from time to time
         torch_nightly: false,
+
+        # if set to true, the agent will look for the "requirements.txt" or "poetry.lock" file 
+        # in the passed current working directory instead of the repository's root directory.
+        poetry_files_from_cwd: false,
     },
 
     # target folder for virtual environments builds, created when executing experiment
