Add agent.package_manager.poetry_install_extra_args configuration option

--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -69,6 +69,7 @@
         pip_version: ["<20.2 ; python_version < '3.10'", "<22.3 ; python_version >= '3.10'"],
         # specify poetry version to use (examples "<2", "==1.1.1", "", empty string will install the latest version)
         # poetry_version: "<2",
+        # poetry_install_extra_args: ["-v"]
 
         # virtual environment inherits packages from system
         system_site_packages: false,
