Add CLEARML_EXTRA_PIP_INSTALL_FLAGS / agent.package_manager.extra_pip_install_flags to control additional pip install flags Fix pip version marking in "installed packages" is now preserved for and reinstalled

--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -93,6 +93,9 @@ agent {
         # extra_index_url: ["https://allegroai.jfrog.io/clearml/api/pypi/public/simple"]
         extra_index_url: []
 
+        # additional flags to use when calling pip install, example: ["--use-deprecated=legacy-resolver", ]
+        # extra_pip_install_flags: []
+
         # control the pytorch wheel resolving algorithm, options are: "pip", "direct"
         # "pip" (default): would automatically detect the cuda version, and supply pip with the correct
         # extra-index-url, based on pytorch.org tables
