Improve file mode comment

--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -206,7 +206,7 @@
 
     default_docker: {
         # default docker image to use when running in docker mode
-        image: "nvidia/cuda:10.2-cudnn7-runtime-ubuntu18.04"
+        image: "nvidia/cuda:11.0.3-cudnn8-runtime-ubuntu20.04"
 
         # optional arguments to pass to docker image
         # arguments: ["--ipc=host", ]
@@ -302,6 +302,8 @@
     #  target_format: format used to encode contents before writing into the target file. Supported values are json,
     #                 yaml, yml and bytes (in which case the file will be written in binary mode). Default is text mode.
     #  overwrite: overwrite the target file in case it exists. Default is true.
+    #  mode: file-system mode to be applied to the file after its creation. The mode string will be parsed into an
+    #        integer (e.g. "0o777" for -rwxrwxrwx)
     #
     # Example:
     #   files {
@@ -367,7 +369,7 @@
     # Notice: Matching is done via regular expression, for example "^searchme$" will match exactly "searchme$" string
     #
     #     "default_docker": {
-    #         "image": "nvidia/cuda:10.2-cudnn7-runtime-ubuntu18.04",
+    #         "image": "nvidia/cuda:11.0.3-cudnn8-runtime-ubuntu20.04",
     #         # optional arguments to pass to docker image
     #         # arguments: ["--ipc=host", ]
     #         "match_rules": [
