Add new pytorch no resolver mode and CLEARML_AGENT_PACKAGE_PYTORCH_RESOLVE to change resolver on a Task basis, now supports "pip", "direct", "none"

--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -80,14 +80,15 @@
         # additional artifact repositories to use when installing python packages
         # extra_index_url: ["https://allegroai.jfrog.io/clearml/api/pypi/public/simple"]
 
-        # control the pytorch wheel resolving algorithm, options are: "pip", "direct"
+        # control the pytorch wheel resolving algorithm, options are: "pip", "direct", "none"
+        # Override with environment variable CLEARML_AGENT_PACKAGE_PYTORCH_RESOLVE
         # "pip" (default): would automatically detect the cuda version, and supply pip with the correct
         # extra-index-url, based on pytorch.org tables
         # "direct": would resolve a direct link to the pytorch wheel by parsing the pytorch.org pip repository
         # and matching the automatically detected cuda version with the required pytorch wheel.
         # if the exact cuda version is not found for the required pytorch wheel, it will try
         # a lower cuda version until a match is found
-        #
+        # "none": No resolver used, install pytorch like any other package
         # pytorch_resolve: "pip"
 
         # additional conda channels to use when installing with conda package manager
