Change default `agent.enable_git_ask_pass` to True

--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -58,8 +58,8 @@ agent {
     # it solves passing user/token to git submodules.
     # this is a safer way to ensure multiple users using the same repository will
     # not accidentally leak credentials
-    # Only supported on Linux systems, it will be the default in future releases
-    # enable_git_ask_pass: false
+    # Note: this is only supported on Linux systems
+    # enable_git_ask_pass: true
 
     # in docker mode, if container's entrypoint automatically activated a virtual environment
     # use the activated virtual environment and install everything there
