Add executable permission to provider_entrypoint.sh

--- a/docker/k8s-glue/glue-build-aws/Dockerfile
+++ b/docker/k8s-glue/glue-build-aws/Dockerfile
@@ -16,6 +16,7 @@ RUN chmod +x /root/setup_aws.sh && /root/setup_aws.sh
 
 COPY ./entrypoint.sh /root/entrypoint.sh
 COPY ./provider_entrypoint.sh /root/provider_entrypoint.sh
+RUN chmod +x /root/provider_entrypoint.sh
 COPY ./k8s_glue_example.py /root/k8s_glue_example.py
 COPY ./clearml.conf /root/clearml.conf
 
