--- a/docker/k8s-glue/glue-build-gcp/Dockerfile
+++ b/docker/k8s-glue/glue-build-gcp/Dockerfile
@@ -19,4 +19,7 @@ COPY ./provider_entrypoint.sh /root/provider_entrypoint.sh
 COPY ./k8s_glue_example.py /root/k8s_glue_example.py
 COPY ./clearml.conf /root/clearml.conf
 
+#TODO: should be adjusted
+RUN python3 -m pip uninstall clearml-agent -y && python3 -m pip install git+https://github.com/FeU-aKlos/clearml-agent.git@feature/support_multi_queeus_with_k8s
+
 ENTRYPOINT ["/root/entrypoint.sh"]
